Resend Invitation Email; Get All Invited Users

--- a/two-factor-auth/src/main/resources/templates/RegistrationMailTemplate.html
+++ b/two-factor-auth/src/main/resources/templates/RegistrationMailTemplate.html
@@ -268,7 +268,7 @@
                                                         <tbody><tr>
                                                             <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;"><div style="text-align: left;">Hello,&nbsp;</div>
                                                                 <div style="text-align: left;">&nbsp;</div>
-                                                                <div style="text-align: left;" th:text="'The administrator ' + ${adminName} + ' has invited you to use  our site.'"></div>
+                                                                <div style="text-align: left;" th:text="'The administrator ' + ${adminName} + ' has invited you to join our website.'"></div>
                                                                 <div style="text-align: left;">&nbsp;</div>
                                                                 <div style="text-align: left;">Please use the button below to set up your account and get started:</div>
                                                             </td>
@@ -347,7 +347,7 @@
                                                                     <tbody><tr>
                                                                         <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
                                                                             <div style="height:20px"></div>
-                                                                            <div style="text-align: left;">P.S. For your security, this button link will expire in 48 hours or after you set up your account.<br>
+                                                                            <div style="text-align: left;">P.S. For your security, this button link will expire in 24 hours or right after you set up your account.<br>
                                                                             <br>Welcome aboard,<br>The Two Factor Authentication Team</div>
                                                                             <div style="height:20px"></div>
                                                                         </td>
