--- a/two-factor-auth/src/main/resources/templates/RegistrationMailTemplate.html
+++ b/two-factor-auth/src/main/resources/templates/RegistrationMailTemplate.html
@@ -189,8 +189,7 @@
         <td align="center" valign="top">
             <!--[if gte mso 9]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="590" style="width:590px;">
-                <tr><td align="center" valign="top" width="590" style="width:590px;">
-            <![endif]-->
+                <tr><td align="center" valign="top" width="590" style="width:590px;"><![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="590" class="templateContainer" style="max-width:590px!important; width: 590px;">
                 <tbody><tr>
                     <td align="center" valign="top">
@@ -212,11 +211,9 @@
                     <td align="center" valign="top">
                         <div style="background-color: rgb(255, 255, 255); border-radius: 0px;">
                             <!--[if mso]>
-                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;"><tr>
-                            <![endif]-->
+                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;"><tr><![endif]-->
                             <!--[if mso]>
-                            <td valign="top" width="590" style="width:590px;">
-                            <![endif]-->
+                            <td valign="top" width="590" style="width:590px;"><![endif]-->
                             <table class="rnb-del-min-width" width="100%" cellpadding="0" border="0" cellspacing="0" style="min-width:590px;" name="Layout_15" id="Layout_15">
                                 <tbody><tr>
                                     <td class="rnb-del-min-width" align="center" valign="top" style="min-width:590px;">
@@ -247,24 +244,19 @@
                                 </tbody>
                             </table>
                             <!--[if mso]>
-                            </td>
-                            <![endif]-->
+                            </td><![endif]-->
                             <!--[if mso]>
                             </tr>
-                            </table>
-                            <![endif]-->
+                            </table><![endif]-->
                         </div>
                     </td>
                 </tr><tr>
                     <td align="center" valign="top">
                         <div style="background-color: rgb(255, 255, 255); border-radius: 0px;">
                             <!--[if mso]>
-                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
-                                <tr>
-                            <![endif]-->
+                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;"><tr><![endif]-->
                             <!--[if mso]>
-                            <td valign="top" width="590" style="width:590px;">
-                            <![endif]-->
+                            <td valign="top" width="590" style="width:590px;"><![endif]-->
                             <table class="rnb-del-min-width" width="100%" cellpadding="0" border="0" cellspacing="0" style="min-width:100%;" name="Layout_5">
                                 <tbody><tr>
                                     <td class="rnb-del-min-width" align="center" valign="top">
@@ -289,23 +281,19 @@
                                             </tbody>
                                         </table>
                                     </td></tr></tbody>
-                            </table><!--[if mso]>
-                            </td>
-                            <![endif]-->
+                            </table>
                             <!--[if mso]>
-                            </tr></table>
-                            <![endif]-->
+                            </td><![endif]-->
+                            <!--[if mso]>
+                            </tr></table><![endif]-->
                         </div></td>
                 </tr><tr>
                     <td align="center" valign="top">
                         <div style="background-color: rgb(255, 255, 255); border-radius: 0px;">
                             <!--[if mso]>
-                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
-                                <tr>
-                            <![endif]-->
+                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;"><tr><![endif]-->
                             <!--[if mso]>
-                            <td valign="top" width="590" style="width:590px;">
-                            <![endif]-->
+                            <td valign="top" width="590" style="width:590px;"><![endif]-->
                             <table class="rnb-del-min-width" width="100%" cellpadding="0" border="0" cellspacing="0" style="min-width:590px;" name="Layout_6" id="Layout_6">
                                 <tbody><tr>
                                     <td class="rnb-del-min-width" align="center" valign="top" style="min-width:590px;">
@@ -316,9 +304,10 @@
                                                 <td valign="top">
                                                     <table cellpadding="0" border="0" align="center" cellspacing="0" class="rnb-btn-col-content" style="margin:auto; border-collapse: separate;">
                                                         <tbody><tr>
-                                                            <td width="auto" valign="middle" bgcolor="#006bb5" align="center" height="41" style="font-size:19px; font-family:'Comic Sans MS',cursive,sans-serif; color:#ffffff; font-weight:normal; padding-left:20px; padding-right:20px; vertical-align: middle; background-color:#006bb5;border-radius:13px;border-top:0px None #9c9c9c;border-right:0px None #9c9c9c;border-bottom:0px None #9c9c9c;border-left:0px None #9c9c9c;">
-                                                                        <span style="color:#ffffff; font-weight:normal;">
-                                                                                <a style="text-decoration:none; color:#ffffff; font-weight:normal;" target="_blank" th:href="${mailService.getRegisterUrl(email)}">SetUp Account</a></span>
+                                                            <td width="auto" valign="middle" bgcolor="#46b8cb" align="center" height="41" style="font-size:19px; font-family:'Comic Sans MS',cursive,sans-serif; color:#ffffff; font-weight:normal; padding-left:20px; padding-right:20px; vertical-align: middle; background-color:#46b8cb;border-radius:13px;border-top:0px None #9c9c9c;border-right:0px None #9c9c9c;border-bottom:0px None #9c9c9c;border-left:0px None #9c9c9c;">
+                                                                <span style="color:#ffffff; font-weight:normal;">
+                                                                    <a style="text-decoration:none; color:#ffffff; font-weight:normal;" target="_blank" th:href="${mailService.getRegisterUrl(email)}">SetUp Account</a>
+                                                                </span>
                                                             </td>
                                                         </tr></tbody>
                                                     </table>
@@ -329,19 +318,15 @@
                                     </td></tr></tbody>
                             </table>
                             <!--[if mso]>
-                            </td>
-                            <![endif]-->
+                            </td><![endif]-->
                             <!--[if mso]>
-                            </tr></table>
-                            <![endif]-->
+                            </tr></table><![endif]-->
                         </div></td>
                 </tr><tr>
                     <td align="center" valign="top">
                         <div style="background-color: rgb(255, 255, 255); border-radius: 0px;">
                             <!--[if mso]>
-                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
-                                <tr>
-                            <![endif]-->
+                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;"><tr><![endif]-->
                             <!--[if mso]><td valign="top" width="590" style="width:590px;"><![endif]-->
                             <table class="rnb-del-min-width" width="100%" cellpadding="0" border="0" cellspacing="0" style="min-width:100%;" name="Layout_7">
                                 <tbody><tr>
@@ -373,18 +358,17 @@
                                                 </td></tr></tbody>
                                         </table>
                                     </td></tr></tbody>
-                            </table><!--[if mso]>
-                            </td>
-                            <![endif]-->
+                            </table>
                             <!--[if mso]>
-                            </tr></table>
-                            <![endif]-->
+                            </td><![endif]-->
+                            <!--[if mso]>
+                            </tr></table><![endif]-->
                         </div></td>
-                </tr></tbody></table>
+                </tr></tbody>
+            </table>
             <!--[if gte mso 9]>
             </td></tr>
-            </table>
-            <![endif]-->
+            </table><![endif]-->
         </td>
     </tr></tbody>
 </table>
