Configure Swagger with JWT Authorization

--- a/two-factor-auth/src/main/resources/templates/ForgottenPasswordMailTemplate.html
+++ b/two-factor-auth/src/main/resources/templates/ForgottenPasswordMailTemplate.html
@@ -270,7 +270,7 @@
                                                                         <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
                                                                             <div th:text="'Hello, ' + ${userName}"></div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div>We heard that you lost your account password. Sorry about that.</div>
+                                                                            <div>You have recently requested to reset your password for your account. </div>
                                                                             <div style="text-align: left;">&nbsp;</div>
                                                                             <div>But don't worry. You can use the following link to reset your password :&nbsp;</div>
                                                                         </td>
@@ -366,7 +366,7 @@
                                                                                 P.S. For your security, this button link will expire in 2 hours.</span>
                                                                             </div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div><span style="background-color: transparent;">If you didn't request to reset your password, please ignore this email.</span></div>
+                                                                            <div><span style="background-color: transparent;">If you didn't request to reset your password, please ignore this email or reply to let us know.</span></div>
                                                                             <div style="text-align: left;">&nbsp;</div>
                                                                             <div><span style="background-color: transparent;">Best regards,</span></div>
                                                                             <div><span style="background-color: transparent;">The Two Factor Authentication Team</span></div>
