Add Article Functionality. Translate email templates in Bulgarian.

--- a/two-factor-auth/src/main/resources/templates/ForgottenPasswordMailTemplate.html
+++ b/two-factor-auth/src/main/resources/templates/ForgottenPasswordMailTemplate.html
@@ -268,11 +268,11 @@
                                                                 <table border="0" valign="top" cellspacing="0" cellpadding="0" width="100%" align="left" class="rnb-col-1">
                                                                     <tbody><tr>
                                                                         <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
-                                                                            <div th:text="'Hello, ' + ${userName}"></div>
+                                                                            <div th:text="'Здравейте, ' + ${userName}"></div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div>You have recently requested to reset your password for your account. </div>
+                                                                            <div>Забелязахме, че се опитвате да смените паролата си за своя акаунт. </div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div>But don't worry. You can use the following link to reset your password :&nbsp;</div>
+                                                                            <div>Не се притеснявайте. Използвайте следния линк за да смените вашата парола : &nbsp;</div>
                                                                         </td>
                                                                     </tr></tbody>
                                                                 </table>
@@ -316,7 +316,7 @@
                                                                                 <tbody><tr>
                                                                                     <td width="auto" valign="middle" bgcolor="#46b8cb" align="center" height="40" style="font-size:18px; font-family:'Comic Sans MS',cursive,sans-serif; color:#ffffff; font-weight:normal; padding-left:20px; padding-right:20px; vertical-align: middle; background-color:#46b8cb;border-radius:12px;border-top:0px None #000;border-right:0px None #000;border-bottom:0px None #000;border-left:0px None #000;">
                                                                                         <span style="color:#ffffff; font-weight:normal;">
-                                                                                            <a style="text-decoration:none; color:#ffffff; font-weight:normal;" target="_blank" th:href="${mailService.getResetPasswordUrl(email)}">Reset Password</a>
+                                                                                            <a style="text-decoration:none; color:#ffffff; font-weight:normal;" target="_blank" th:href="${mailService.getResetPasswordUrl(email)}">Смени Парола</a>
                                                                                         </span>
                                                                                     </td>
                                                                                 </tr></tbody>
@@ -363,13 +363,14 @@
                                                                         <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
                                                                             <div style="text-align: left;">&nbsp;</div>
                                                                             <div style="text-align: left;"><span style="font-size:14px;">
-                                                                                P.S. For your security, this button link will expire in 2 hours.</span>
+                                                                                За вашата сигурност, линкът ще изтече след 30 минути.</span>
                                                                             </div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div><span style="background-color: transparent;">If you didn't request to reset your password, please ignore this email or reply to let us know.</span></div>
+                                                                            <div><span style="background-color: transparent;">
+                                                                            Ако не сте поискали да зададете нова парола, моля, игнорирайте този имейл или ни отговорете, за да ни уведомите.</span></div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div><span style="background-color: transparent;">Best regards,</span></div>
-                                                                            <div><span style="background-color: transparent;">The Two Factor Authentication Team</span></div>
+                                                                            <div><span style="background-color: transparent;">Поздрави,</span></div>
+                                                                            <div><span style="background-color: transparent;">Екипът на Двуфакторна Автентикация</span></div>
                                                                         </td>
                                                                     </tr></tbody>
                                                                 </table>
