--- a/two-factor-auth/src/main/resources/templates/LoginVerificationMailTemplate.html
+++ b/two-factor-auth/src/main/resources/templates/LoginVerificationMailTemplate.html
@@ -285,18 +285,18 @@
                                                             <table border="0" valign="top" cellspacing="0" cellpadding="0" width="100%" align="left" class="rnb-col-1">
                                                                 <tbody><tr>
                                                                     <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
-                                                                        <div th:text="'Hello, ' + ${userName}"></div>
+                                                                        <div th:text="'Здравейте, ' + ${userName} + '.'"></div>
                                                                         <div style="text-align: left;">&nbsp;</div>
-                                                                        <div style="text-align: left;">A verification code has been sent to you!<br>&nbsp;</div>
-                                                                        <div style="text-align: left;">Please use the code below and get started:</div>
+                                                                        <div style="text-align: left;">Изпращаме ви код за верификация!<br>&nbsp;</div>
+                                                                        <div style="text-align: left;">Моля използвайте посочения отдолу код за да продължите напред:</div>
                                                                         <div style="text-align: left;">&nbsp;</div>
                                                                         <div style="text-align: center;"><span style="font-size:16px;">
-                                                                            <strong th:text="'Login Verification Code : ' + ${verificationCode}"></strong></span>
+                                                                            <strong th:text="'Код за Верификация : ' + ${verificationCode}"></strong></span>
                                                                         </div>
                                                                         <div style="text-align: left;">&nbsp;</div>
-                                                                        <div style="text-align: left;"><span style="font-size:14px;">P.S. For your security, this verification code will expire in 2 minutes.</span></div>
+                                                                        <div style="text-align: left;"><span style="font-size:14px;">За вашата сигурност, този код за верификация ще изтече след 2 минути.</span></div>
                                                                         <div style="text-align: left;">&nbsp;</div>
-                                                                        <div style="text-align: left;">Best regards,<br>The Two Factor Authentication Team</div>
+                                                                        <div style="text-align: left;">Поздрави,<br>Екипът на Двуфакторна Автентикация</div>
                                                                     </td>
                                                                 </tr></tbody>
                                                             </table>
