--- a/two-factor-auth/src/main/resources/templates/RegistrationMailTemplate.html
+++ b/two-factor-auth/src/main/resources/templates/RegistrationMailTemplate.html
@@ -268,11 +268,11 @@
                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0" class="rnb-columns-container">
                                                         <tbody><tr>
                                                             <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
-                                                                <div style="text-align: left;">Hello,&nbsp;</div>
+                                                                <div style="text-align: left;">Здравейте,&nbsp;</div>
                                                                 <div style="text-align: left;">&nbsp;</div>
-                                                                <div style="text-align: left;" th:text="'The administrator ' + ${userName} + ' has invited you to join our website.'"></div>
+                                                                <div style="text-align: left;" th:text="'Администраторът ' + ${userName} + ' ви покани да се присъедините към нашата платформа.'"></div>
                                                                 <div style="text-align: left;">&nbsp;</div>
-                                                                <div style="text-align: left;">Please use the button below to set up your account and get started:</div>
+                                                                <div style="text-align: left;">Моля използвайте бутона отдолу за да създадете своя профил:</div>
                                                             </td>
                                                         </tr></tbody>
                                                     </table>
@@ -306,7 +306,7 @@
                                                         <tbody><tr>
                                                             <td width="auto" valign="middle" bgcolor="#46b8cb" align="center" height="41" style="font-size:19px; font-family:'Comic Sans MS',cursive,sans-serif; color:#ffffff; font-weight:normal; padding-left:20px; padding-right:20px; vertical-align: middle; background-color:#46b8cb;border-radius:13px;border-top:0px None #9c9c9c;border-right:0px None #9c9c9c;border-bottom:0px None #9c9c9c;border-left:0px None #9c9c9c;">
                                                                 <span style="color:#ffffff; font-weight:normal;">
-                                                                    <a style="text-decoration:none; color:#ffffff; font-weight:normal;" target="_blank" th:href="${mailService.getRegisterUrl(email)}">SetUp Account</a>
+                                                                    <a style="text-decoration:none; color:#ffffff; font-weight:normal;" target="_blank" th:href="${mailService.getRegisterUrl(email)}">Регистрация</a>
                                                                 </span>
                                                             </td>
                                                         </tr></tbody>
@@ -342,13 +342,13 @@
                                                                     <tbody><tr>
                                                                         <td class="content-spacing" style="font-size:14px; font-family:'Comic Sans MS',cursive,sans-serif, sans-serif; color:#3c4858; line-height: 21px;">
                                                                             <div style="text-align: center;"><span style="font-size:16px;">
-                                                                                <strong th:text="'Registration Verification Code : ' + ${verificationCode}"></strong></span>
+                                                                                <strong th:text="'Код за Верификация : ' + ${verificationCode}"></strong></span>
                                                                             </div>
                                                                             <div style="text-align: center;">&nbsp;</div>
-                                                                            <div style="text-align: left;">P.S. For your security, this button link will expire in 24 hours or right after you set up your account.<br>&nbsp;</div>
-                                                                            <div style="text-align: left;">If you require any further information please don't hesitate to contact us.</div>
+                                                                            <div style="text-align: left;">За вашата сигурност, този линк ще изтече след 24 часа или веднага след като се регистрирате успешно.<br>&nbsp;</div>
+                                                                            <div style="text-align: left;">Ако искате по-подробна информация, не се колебайте да се свържете с нас.</div>
                                                                             <div style="text-align: left;">&nbsp;</div>
-                                                                            <div style="text-align: left;">Welcome aboard,<br>The Two Factor Authentication Team</div>
+                                                                            <div style="text-align: left;">Добре дошли,<br>Екипът на Двуфакторна Автентикация</div>
                                                                             <div style="text-align: center;">&nbsp;</div>
                                                                         </td>
                                                                     </tr></tbody>
